Bug ZK-2290: Missing horizontal scrollbar when resizing listbox column

--- a/zul/src/archive/web/js/zul/grid/less/grid.less
+++ b/zul/src/archive/web/js/zul/grid/less/grid.less
@@ -45,6 +45,7 @@
 		.fontStyle(@baseContentFontFamily, @fontSizeMedium, normal, @disabledColor);
 		font-style: italic;
 		text-align: center;
+		height: 1px;
 	}
 	//grid footer
 	&-footer {
