--- a/zul/src/archive/web/js/zul/sel/less/listbox.less
+++ b/zul/src/archive/web/js/zul/sel/less/listbox.less
@@ -44,6 +44,7 @@
 		.fontStyle(@baseContentFontFamily, @fontSizeMedium, normal, @disabledColor);
 		font-style: italic;
 		text-align: center;
+		height: 1px;
 	}
 	//listbox footer
 	&-footer {
